--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "A sandbox to play around with Preact + Typescript and friends",
   "main": "index.js",
   "scripts": {
-    "start": "parcel ./src/index.html --open"
+    "start": "parcel ./src/index.html --open",
+    "dev": "run-p dev:*",
+    "dev:server": "wait-on build/server.js && nodemon --watch build/server.js --exec \"node build/server.js\"",
+    "dev:build-client": "parcel watch src/index.html -d build/client --public-url /public",
+    "dev:build-server": "parcel watch src/server.tsx -d build --public-url /public --target=node8"
   },
   "repository": {
     "type": "git",
@@ -28,9 +32,17 @@
   },
   "homepage": "https://github.com/kenpb/preact-ssr-sandbox/",
   "dependencies": {
-    "preact": "8.3.1"
+    "compression": "1.7.3",
+    "express": "4.16.3",
+    "preact": "8.3.1",
+    "preact-render-to-string": "3.8.2"
   },
   "devDependencies": {
-    "parcel-bundler": "1.10.2"
+    "@types/express": "4.16.0",
+    "nodemon": "1.18.4",
+    "npm-run-all": "4.1.3",
+    "parcel-bundler": "1.10.2",
+    "typescript": "^3.1.2",
+    "wait-on": "3.1.0"
   }
 }
